--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -2288,26 +2288,28 @@
        "<table>\n",
        "    <tr>\n",
        "        <th>first_name</th>\n",
+       "        <th>last_name</th>\n",
        "        <th>MAX(avg_grade)</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>Anna</td>\n",
+       "        <td>Johansson</td>\n",
        "        <td>4.02537313433</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(u'Anna', 4.025373134328358)]"
+       "[(u'Anna', u'Johansson', 4.025373134328358)]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "SELECT first_name, MAX(avg_grade)\n",
+    "SELECT first_name, last_name, MAX(avg_grade)\n",
     "FROM students, \n",
     "    (\n",
     "        SELECT taken_courses.ssn, AVG(grade) AS avg_grade\n",
