--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -157,10 +157,10 @@
     {
      "data": {
       "text/plain": [
-       "u'Connected: None@lab1.db'"
+       "'Connected: None@lab1.db'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2749,7 +2749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -2768,6 +2768,50 @@
        "    <tr>\n",
        "        <th>ssn</th>\n",
        "        <th>sum_credits</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>850517-2597</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>870909-3367</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>880206-1915</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>891007-3091</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>891220-1393</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>900129-3374</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>900313-2257</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>911015-3758</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>931225-3158</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>950125-1153</td>\n",
+       "        <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>950829-1848</td>\n",
+       "        <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>930420-2833</td>\n",
@@ -3016,83 +3060,91 @@
        "</table>"
       ],
       "text/plain": [
-       "[(u'930420-2833', 4.0),\n",
-       " (u'950715-2090', 7.5),\n",
-       " (u'920514-3433', 22.0),\n",
-       " (u'931015-1271', 22.5),\n",
-       " (u'910707-3787', 28.5),\n",
-       " (u'850706-2762', 30.0),\n",
-       " (u'900526-1450', 31.0),\n",
-       " (u'950714-2190', 32.5),\n",
-       " (u'920812-1857', 37.0),\n",
-       " (u'950705-2308', 37.5),\n",
-       " (u'950317-3520', 43.5),\n",
-       " (u'890103-1256', 52.5),\n",
-       " (u'941003-1225', 52.5),\n",
-       " (u'930716-3933', 60.0),\n",
-       " (u'891106-1277', 60.5),\n",
-       " (u'910226-3409', 63.0),\n",
-       " (u'900528-1540', 64.5),\n",
-       " (u'860323-1071', 70.5),\n",
-       " (u'891231-2554', 76.0),\n",
-       " (u'850819-2139', 76.5),\n",
-       " (u'910308-1826', 83.0),\n",
-       " (u'951122-1048', 110.0),\n",
-       " (u'931213-2824', 111.0),\n",
-       " (u'940825-1934', 117.5),\n",
-       " (u'940802-3861', 123.0),\n",
-       " (u'881030-2772', 133.0),\n",
-       " (u'900206-3735', 139.0),\n",
-       " (u'860819-2864', 140.5),\n",
-       " (u'930804-3050', 148.0),\n",
-       " (u'860206-1065', 151.0),\n",
-       " (u'861103-2438', 153.0),\n",
-       " (u'881110-1272', 154.5),\n",
-       " (u'940801-2971', 161.5),\n",
-       " (u'850208-1213', 166.5),\n",
-       " (u'890820-2496', 170.0),\n",
-       " (u'931128-1333', 171.5),\n",
-       " (u'920906-3371', 174.0),\n",
-       " (u'950830-2637', 174.0),\n",
-       " (u'911212-1746', 181.0),\n",
-       " (u'930502-2040', 189.0),\n",
-       " (u'901030-1895', 192.0),\n",
-       " (u'890622-1928', 205.0),\n",
-       " (u'900918-3999', 216.0),\n",
-       " (u'940318-2373', 223.0),\n",
-       " (u'931208-3605', 229.5),\n",
-       " (u'911020-3538', 241.5),\n",
-       " (u'910101-1234', 249.5),\n",
-       " (u'880322-3951', 250.5),\n",
-       " (u'870915-2742', 254.0),\n",
-       " (u'900227-2369', 262.5),\n",
-       " (u'891021-1287', 267.0),\n",
-       " (u'920921-2499', 267.5),\n",
-       " (u'921029-1995', 268.5),\n",
-       " (u'930702-3582', 288.5),\n",
-       " (u'920308-3854', 289.0),\n",
-       " (u'890621-3057', 295.5),\n",
-       " (u'921222-2113', 332.0),\n",
-       " (u'920623-3258', 334.0),\n",
-       " (u'910915-2068', 338.0),\n",
-       " (u'880620-2564', 348.5),\n",
-       " (u'951004-2346', 350.0)]"
+       "[('850517-2597', 0),\n",
+       " ('870909-3367', 0),\n",
+       " ('880206-1915', 0),\n",
+       " ('891007-3091', 0),\n",
+       " ('891220-1393', 0),\n",
+       " ('900129-3374', 0),\n",
+       " ('900313-2257', 0),\n",
+       " ('911015-3758', 0),\n",
+       " ('931225-3158', 0),\n",
+       " ('950125-1153', 0),\n",
+       " ('950829-1848', 0),\n",
+       " ('930420-2833', 4.0),\n",
+       " ('950715-2090', 7.5),\n",
+       " ('920514-3433', 22.0),\n",
+       " ('931015-1271', 22.5),\n",
+       " ('910707-3787', 28.5),\n",
+       " ('850706-2762', 30.0),\n",
+       " ('900526-1450', 31.0),\n",
+       " ('950714-2190', 32.5),\n",
+       " ('920812-1857', 37.0),\n",
+       " ('950705-2308', 37.5),\n",
+       " ('950317-3520', 43.5),\n",
+       " ('890103-1256', 52.5),\n",
+       " ('941003-1225', 52.5),\n",
+       " ('930716-3933', 60.0),\n",
+       " ('891106-1277', 60.5),\n",
+       " ('910226-3409', 63.0),\n",
+       " ('900528-1540', 64.5),\n",
+       " ('860323-1071', 70.5),\n",
+       " ('891231-2554', 76.0),\n",
+       " ('850819-2139', 76.5),\n",
+       " ('910308-1826', 83.0),\n",
+       " ('951122-1048', 110.0),\n",
+       " ('931213-2824', 111.0),\n",
+       " ('940825-1934', 117.5),\n",
+       " ('940802-3861', 123.0),\n",
+       " ('881030-2772', 133.0),\n",
+       " ('900206-3735', 139.0),\n",
+       " ('860819-2864', 140.5),\n",
+       " ('930804-3050', 148.0),\n",
+       " ('860206-1065', 151.0),\n",
+       " ('861103-2438', 153.0),\n",
+       " ('881110-1272', 154.5),\n",
+       " ('940801-2971', 161.5),\n",
+       " ('850208-1213', 166.5),\n",
+       " ('890820-2496', 170.0),\n",
+       " ('931128-1333', 171.5),\n",
+       " ('920906-3371', 174.0),\n",
+       " ('950830-2637', 174.0),\n",
+       " ('911212-1746', 181.0),\n",
+       " ('930502-2040', 189.0),\n",
+       " ('901030-1895', 192.0),\n",
+       " ('890622-1928', 205.0),\n",
+       " ('900918-3999', 216.0),\n",
+       " ('940318-2373', 223.0),\n",
+       " ('931208-3605', 229.5),\n",
+       " ('911020-3538', 241.5),\n",
+       " ('910101-1234', 249.5),\n",
+       " ('880322-3951', 250.5),\n",
+       " ('870915-2742', 254.0),\n",
+       " ('900227-2369', 262.5),\n",
+       " ('891021-1287', 267.0),\n",
+       " ('920921-2499', 267.5),\n",
+       " ('921029-1995', 268.5),\n",
+       " ('930702-3582', 288.5),\n",
+       " ('920308-3854', 289.0),\n",
+       " ('890621-3057', 295.5),\n",
+       " ('921222-2113', 332.0),\n",
+       " ('920623-3258', 334.0),\n",
+       " ('910915-2068', 338.0),\n",
+       " ('880620-2564', 348.5),\n",
+       " ('951004-2346', 350.0)]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "SELECT t.ssn, SUM(credits) AS sum_credits\n",
-    "FROM taken_courses t, students s\n",
-    "LEFT JOIN courses c ON c.course_code = t.course_code\n",
-    "LEFT JOIN students s2 ON t.ssn = s2.ssn\n",
-    "WHERE t.ssn = s.ssn\n",
-    "GROUP BY t.ssn\n",
-    "ORDER BY sum_credits;"
+    "SELECT s.ssn, coalesce(SUM(credits), 0) AS sum_credits\n",
+    "FROM students s LEFT OUTER JOIN taken_courses t ON t.ssn = s.ssn LEFT OUTER JOIN courses c ON t.course_code = c.course_code\n",
+    "GROUP BY s.ssn\n",
+    "ORDER BY sum_credits ASC"
    ]
   },
   {
@@ -3218,21 +3270,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
